add wallet and organize balance

--- a/lang/fa.json
+++ b/lang/fa.json
@@ -6,6 +6,7 @@
     "Log in" : "ورود",
     "Log Out" : "خروج",
     "Shop" : "فروشگاه",
+    "Balance" : "موجودی",
     "Profile" : "نمایه",
     "Search" : "جستوجو",
     "Cancel" : "انصراف",
