add category dashboard crud

--- a/lang/fa.json
+++ b/lang/fa.json
@@ -1,20 +1,29 @@
 {
-    "Home" : "خانه",
     "Name" : "نام",
+    "Id" : "شناسه",
+    "Home" : "خانه",
+    "edit" : "اصلاح",
+    "delete" : "حذف",
     "more" : "بیشتر",
     "Save" : "ذخیره",
+    "Slug" : "پیوند",
+    "show" : "نمایش",
     "Log in" : "ورود",
+    "Parent" : "والد",
     "Log Out" : "خروج",
     "Shop" : "فروشگاه",
     "Profile" : "نمایه",
     "Search" : "جستوجو",
     "Cancel" : "انصراف",
+    "Warning" : "اخطار",
+    "Actions" : "عملیات",
     "Balance" : "موجودی",
     "Register" : "ثبت‌نام",
-    "Saved." : "ذخیره شد.",
     "Password" : "گذرواژه",
+    "Saved." : "ذخیره شد.",
     "Dashboard" : "میزکار",
     "Regards" : "با احترام",
+    "Category" : "دسته‌بندی",
     "About us" : "درباره‌ی ما",
     "Email" : "پست الکترونیک",
     "My orders" : "سفارشات من",
@@ -22,16 +31,21 @@
     "Delete Account" : "حذف حساب",
     "New Password" : "گذرواژه جدید",
     "How to order" : "نحو ثبت سفارش",
+    "Parent Category" : "دسته‌بندی والد",
     "Current Password" : "گذرواژه فعلی",
     "Remember me" : "مرا به خاطر بسپار",
+    "Category List" : "لیست دسته‌بندی‌ها",
+    "Create Category" : "ایجاد دسته‌بندی",
     "login | register" : "ورود | ثبت‌نام",
     "Confirm Password" : "تایید گذرواژه",
     "You're logged in!" : "شما وارد شدید!",
     "Profile Information" : "اطلاعات نمایه ",
     "Update Password" : "بروزرسانی گذرواژه",
+    "are you sure?" : "آیا شما مطمئن هستید؟",
     "Already registered?" : "قبلا ثبت‌نام کردید؟",
     "Resend Verification Email" : "ارسال دوباره تاییده",
     "Verify Email Address" : "تاییدیه نشانی پست الکترونیک",
+    "create a new category" : "یک دسته‌بندی جدید ایجاد کنید",
     "Forgot your password?" : "آیا گذرواژه خود را فراموش کردید؟",
     "Email Password Reset Link" : "پست الکترونیک جهت بازنشانی گذرواژه",
     "Are you sure you want to delete your account?" : "آیا مطمئن هستید که می خواهید حساب خود را حذف کنید؟",
