add brand dashboard crud

--- a/lang/fa.json
+++ b/lang/fa.json
@@ -2,20 +2,22 @@
     "Name" : "نام",
     "Id" : "شناسه",
     "Home" : "خانه",
-    "edit" : "اصلاح",
     "delete" : "حذف",
     "more" : "بیشتر",
     "Save" : "ذخیره",
+    "Brand" : "برند",
     "Slug" : "پیوند",
     "show" : "نمایش",
+    "Submit" : "ثبت",
     "Log in" : "ورود",
     "Parent" : "والد",
+    "edit" : "ویرایش",
     "Log Out" : "خروج",
     "Shop" : "فروشگاه",
     "Profile" : "نمایه",
     "Search" : "جستوجو",
     "Cancel" : "انصراف",
-    "Warning" : "اخطار",
+    "Warning" : "هشدار",
     "Actions" : "عملیات",
     "Balance" : "موجودی",
     "Register" : "ثبت‌نام",
@@ -28,26 +30,39 @@
     "Email" : "پست الکترونیک",
     "My orders" : "سفارشات من",
     "Contact us" : "تماس با ما",
+    "Create At" : "تاریخ ایجاد",
+    "Edit Brand" : "ویرایش برند",
+    "Brand List" : "لیست برند‌ها",
     "Delete Account" : "حذف حساب",
+    "Create Brand" : "ایجاد برند",
     "New Password" : "گذرواژه جدید",
+    "Updated At" : "تاریخ بروزرسانی",
     "How to order" : "نحو ثبت سفارش",
     "Parent Category" : "دسته‌بندی والد",
     "Current Password" : "گذرواژه فعلی",
     "Remember me" : "مرا به خاطر بسپار",
     "Category List" : "لیست دسته‌بندی‌ها",
-    "Create Category" : "ایجاد دسته‌بندی",
+    "Edit Category" : "ویرایش دسته‌بندی",
     "login | register" : "ورود | ثبت‌نام",
+    "Create Category" : "ایجاد دسته‌بندی",
     "Confirm Password" : "تایید گذرواژه",
     "You're logged in!" : "شما وارد شدید!",
     "Profile Information" : "اطلاعات نمایه ",
     "Update Password" : "بروزرسانی گذرواژه",
     "are you sure?" : "آیا شما مطمئن هستید؟",
     "Already registered?" : "قبلا ثبت‌نام کردید؟",
+    "create a new brand" : "یک برند جدید ایجاد کنید",
     "Resend Verification Email" : "ارسال دوباره تاییده",
     "Verify Email Address" : "تاییدیه نشانی پست الکترونیک",
     "create a new category" : "یک دسته‌بندی جدید ایجاد کنید",
+    "Brand deleted successfully." : "برند با موفقیت حذف شد.",
+    "Brand created successfully." : "برند با موفقیت ایجاد شد.",
     "Forgot your password?" : "آیا گذرواژه خود را فراموش کردید؟",
+    "Brand updated successfully." : "برند با موفقیت بروزرسانی شد.",
+    "Category deleted successfully." : "دسته‌بندی با موفقیت حذف شد.",
+    "Category created successfully." : "دسته‌بندی با موفقیت ایجاد شد.",
     "Email Password Reset Link" : "پست الکترونیک جهت بازنشانی گذرواژه",
+    "Category updated successfully." : "دسته‌بندی با موفقیت بروزرسانی شد.",
     "Are you sure you want to delete your account?" : "آیا مطمئن هستید که می خواهید حساب خود را حذف کنید؟",
     "We have emailed your password reset link." : "ما پیوند بازنشانی گذرواژه شما را پست الکترونیک کرده ایم.",
     "With this action, the user will be unavailable and disabled!" : "با این عمل  کاربر از دسترس خارج خواهد شد و غیرفعال میشود!",
