add product dashboard crud

--- a/lang/fa.json
+++ b/lang/fa.json
@@ -26,15 +26,21 @@
     "Dashboard" : "میزکار",
     "Regards" : "با احترام",
     "Category" : "دسته‌بندی",
+    "Product List" : "لیست محصولات",
+    "Price" : "قیمت",
+    "description" : "توضیحات",
+    "Product" : "محصول",
     "About us" : "درباره‌ی ما",
     "Email" : "پست الکترونیک",
     "My orders" : "سفارشات من",
     "Contact us" : "تماس با ما",
-    "Create At" : "تاریخ ایجاد",
+    "Created At" : "تاریخ ایجاد",
     "Edit Brand" : "ویرایش برند",
+    "Edit Product" : "ویرایش محصول",
     "Brand List" : "لیست برند‌ها",
     "Delete Account" : "حذف حساب",
     "Create Brand" : "ایجاد برند",
+    "Create Product" : "ایجاد محصول",
     "New Password" : "گذرواژه جدید",
     "Updated At" : "تاریخ بروزرسانی",
     "How to order" : "نحو ثبت سفارش",
@@ -52,6 +58,7 @@
     "are you sure?" : "آیا شما مطمئن هستید؟",
     "Already registered?" : "قبلا ثبت‌نام کردید؟",
     "create a new brand" : "یک برند جدید ایجاد کنید",
+    "create a new product" : "یک محصول جدید ایجاد کنید",
     "Resend Verification Email" : "ارسال دوباره تاییده",
     "Verify Email Address" : "تاییدیه نشانی پست الکترونیک",
     "create a new category" : "یک دسته‌بندی جدید ایجاد کنید",
