--- a/lang/fa.json
+++ b/lang/fa.json
@@ -14,6 +14,7 @@
     "edit" : "ویرایش",
     "Log Out" : "خروج",
     "Shop" : "فروشگاه",
+    "Child" : "فرزند",
     "Profile" : "نمایه",
     "Search" : "جستوجو",
     "Cancel" : "انصراف",
