add comment crud

--- a/lang/fa.json
+++ b/lang/fa.json
@@ -15,6 +15,10 @@
     "Log Out" : "خروج",
     "Shop" : "فروشگاه",
     "Child" : "فرزند",
+    "Comment List" : "لیست نظرات",
+    "Comment" : "نظر",
+    "body" : "بدنه",
+    "User" : "کاربر",
     "Profile" : "نمایه",
     "Search" : "جستوجو",
     "Cancel" : "انصراف",
