order crud admin side

--- a/lang/fa.json
+++ b/lang/fa.json
@@ -17,6 +17,7 @@
     "Child" : "فرزند",
     "Comment List" : "لیست نظرات",
     "Comment" : "نظر",
+    "Order" : "سفارش",
     "body" : "بدنه",
     "User" : "کاربر",
     "Profile" : "نمایه",
